--- a/index-style.css
+++ b/index-style.css
@@ -303,7 +303,7 @@ html {
   display: flex;
   justify-content: center;
   gap: 6vw;
-  margin-bottom: 8vh;
+  margin-bottom: 14vh;
   flex-wrap: wrap;
 }
 
@@ -315,7 +315,7 @@ html {
   display: flex;
   justify-content: center;
   gap: 6vw;
-  margin-bottom: 8vh;
+  margin-bottom: 14vh;
   flex-wrap: wrap;
 }
 
@@ -327,13 +327,13 @@ html {
   display: flex;
   justify-content: center;
   gap: 6vw;
-  margin-bottom: 8vh;
+  margin-bottom: 14vh;
   flex-wrap: wrap;
 }
 
 .service-card {
-  width: 40vw;
-  height: 60vh;
+  width: 35vw;
+  height: 55vh;
   margin-bottom: 5vh;
   text-decoration: none;
   transition: box-shadow 0.3s ease;
@@ -357,9 +357,14 @@ html {
   line-height: 1.5;
 }
 
+.learn-more {
+  font-size: 1.2vw;
+  color: #555;
+}
+
 .service-card:hover {
   transform: translateY(-0.3vh);
-  box-shadow: 0 3vw 3vw rgb(176, 126, 0);
+  box-shadow: 0 3vw 3vw rgb(42, 42, 42);
 }
 
 /* PRICING SECTION (WITHIN SERVICES SECTION) */
@@ -384,8 +389,8 @@ html {
 
 .pricing-card {
   font-family: 'Varela Round', sans-serif;
-  width: 28vw;
-  height: 60vh;
+  width: 25vw;
+  height: 45vh;
   margin-bottom: 4vh;
   background-color: #f5f5f5;
   border: 0.2vw solid #000000;
@@ -404,22 +409,22 @@ html {
 }
 
 .pricing-title {
-  font-size: 2.5vw;
+  font-size: 2vw;
   font-weight: bold;
-  margin-top: 0.5vh;
+  margin-top: 0vh;
   color: #df9100;
   font-family: 'Varela Round', sans-serif;
 }
 
 .pricing-subtitle {
-  font-size: 1.2vw;
+  font-size: 1vw;
   margin-top: 0.5vh;
   color: #555;
   font-family: 'Varela Round', sans-serif;
 }
 
 .pricing-price {
-  font-size: 3vw;
+  font-size: 2.5vw;
   margin-top: 0.5vh;
   margin-bottom: 2vh;
   color: #555;
@@ -555,8 +560,8 @@ html {
 }
 
 .gallery-track img {
-  height: 40vh;
-  width: auto;
+  height: 45vh;
+  width: 20vw;
   object-fit: cover;
   border-radius: 1vw;
   flex-shrink: 0;
